src/global.scss
/* ... */
.icon-only-button {
  color: #FFFFFF;
  background-color: transparent !important;
  padding: 0px;
}

.background-black {
  --background: rgb(0,0,0) !important;
  --background-hover: rgb(0,0,0) !important;
  color: #FFFFFF !important;
}

.transparent {
  background: rgba(0,0,0,0) !important;
  --background: rgba(0,0,0,0) !important;
}

.display-inline-block {
  display: inline-block;
}

.display-block {
  display: block;
}

.picker-button {
  color: rgb(0,0,0) !important;
}

.background-navigation-left {
  --background: url('/assets/imgs/navigation_left.png') center center/70% 40% no-repeat;
}

.background-navigation-center {
  --background: url('/assets/imgs/navigation_center.png') center center/70% 40% no-repeat;
}

.background-navigation-right {
  --background: url('/assets/imgs/navigation_right.png') center center/70% 40% no-repeat;
}

.background-focus-circle {
  background-image: url('/assets/icon/purple/focus_circle.svg');
  background-position: center;
  background-size: cover;
}

.background-menu {
  --background: url('/assets/icon/purple/background_menu.svg') center center/70% 40% cover;
  background-image: url('/assets/icon/purple/background_menu.svg');
  background-position: center;
  background-size: cover;
}

.header-background {
  --background: url('/assets/imgs/header_background.svg') center center/100% 110% no-repeat;
}

.header-ios ion-toolbar:last-child {
  --border-width: 0 !important;
}

.header-md::after {
  display: none;
}

.height-169px {
  height: 169px;
}

.background-color-white {
  background-color: #ffffff;
}

.absolute-bottom {
  position: absolute;
  bottom: 0px;
}

.border-left-white-2px {
  border-left: 2px solid #ffffff;
}

.border-1 {
  border: 1px solid;
}

.border-6049C4-50per {
  border: 1px solid;
  border-color: rgba(96, 73, 196, 0.5)
}

.border-1px-red {
  border: 1px solid red;
}

.font-red {
  color: red;
}

.align-self-end {
  align-self: end;
}

.feedback {
  margin: auto;
}

.scroll-content, .content {
  scrollbar-width: none;
  padding: 2px !important;
}

.calendar-hour-column, .weekview-allday-label, .dayview-allday-label {
  width: 100px !important;
}

.margin-bottom-0-auto {
  margin: auto auto 0 auto;
}

.margin-top-7-auto {
  margin: 7px auto auto auto;
}

.margin-left-0-auto {
  margin: auto auto auto 0;
}

.margin-left-7-auto {
  margin: auto auto auto 7px;
}

.margin-horizontal-auto {
  margin-left: auto;
  margin-right: auto;
}

.weekview-allday-content-table td, {
  border: 1px solid #FFFFFF !important;
  border-top: transparent !important;
}

.weekview-allday-label {
  border-top: transparent !important;
  border-left: 1px solid #FFFFFF !important;
  border-bottom: 1px solid #FFFFFF !important;
}

.slide-container {
  padding: 2px !important;
  overflow: scroll !important;
  scrollbar-width: none !important;
}

.weekview-current {
  background-color: #439194 !important;
}


.margin-left-20 {
    margin-left: 20px;
}

.secondary {
  width: 70%;
  margin: auto;
  margin-top: 100px;
  background-color: var(--ion-color-secondary);
  color: #000000;
}

.button-design {
  background-color: rgba(102,102,102,0.2);
  padding: 5px;
  border-radius: 20px;
  border: 1px solid;
  color: #FFFFFF;
}

.background-102 {
  background-color: rgba(102,102,102,0.2);
}

ion-item {
    white-space: pre-line;
}

.content-container {
  background-color: var(--ion-color-secondary);
  border-radius: 20px;
  padding: 10px;
  color: #000000;
}

ion-toolbar {
    font-weight: bold;
}

.font-weight-bold {
  font-weight: bold;
}

.item-md.item-block .item-inner {
  border-bottom: transparent;
}

.header-container {
  background-color: var(--ion-color-primary);
  padding-left: 20px;
  height: 110px;
}

.font-activated {
  color: #2F80ED;
}

.header-logo {
  margin-top: 50px;
}

.font-size-1rem {
  font-size: 1rem !important;
}

.font-size-0-8rem {
  font-size: 0.8rem !important;
}

.font-size-10px {
  font-size: 10px;
}

.font-size-12px {
  font-size: 12px !important;
}

.font-size-14px {
  font-size: 14px;
}

.font-size-15px {
  font-size: 15px !important;
}

.font-size-16px {
  font-size: 16px;
}

.font-size-17px {
  font-size: 17px;
}

.font-size-18px {
  font-size: 18px;
}

.font-size-20px {
  font-size: 20px !important;
}

.font-size-24px {
  font-size: 24px;
}

.font-size-25px  {
  font-size: 25px;
}

.font-size-30px {
  font-size: 30px !important;
}

.font-size-32px {
  font-size: 32px;
}

.font-size-40px {
  font-size: 40px !important;
}

.font-size-48px {
  font-size: 48px;
}

.font-size-50px {
  font-size: 50px !important;
}

.line-height-1 {
  line-height: 1 !important;
}

.text-muted {
  padding: 0 !important;
}

.monthview-datetable {
  padding: 0 !important;
}

.swiper-slide {
  padding: 1px !important;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
  padding: 0 !important;
}

.table[_ngcontent-bhf-c3] > thead[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tbody[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tfoot[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > thead[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tbody[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tfoot[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3] {
  padding: 0 !important;
}

.font-size-1-5rem {
  font-size: 1.5rem !important;
}

.font-size-2rem {
  font-size: 2rem !important;
}

.header-icons-div {
  height: 22px;
  background-color: var(--ion-color-primary);
  position: absolute;
  bottom: 0;
  right: 0;
  margin-bottom: 1px;
  margin-right: 20px;
}

.header-icon {
  background-color: var(--ion-color-primary);
  color: #FFFFFF;
  font-size: 20px;
}
/* ... */

